@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-01-04"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090104
-#define RUBY_PATCHLEVEL 75
+#define RUBY_PATCHLEVEL 76
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
